# tg-space-game-rust

./: .env  Cargo.toml
migrations/2018-04-02-213313_create_star_sectors/: down.sql
migrations/2018-04-02-214214_add_column_star_systems_sector/: down.sql  up.sql
migrations/2018-04-02-221308_create_star_sector_futures/: up.sql
migrations/2018-04-15-134939_galaxy_object_foreign_key/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
src/schema/: mod.rs  types.rs
tg_space_game/: Cargo.toml
tg_space_game/migrations/2018-04-02-182525_create_star_systems/: down.sql  up.sql
tg_space_game/migrations/2018-04-02-213313_create_star_sectors/: up.sql
tg_space_game/migrations/2018-04-02-221308_create_star_sector_futures/: down.sql
tg_space_game/migrations/2018-04-08-171838_add_star_sector_futures_parent_constraint/: down.sql  up.sql
tg_space_game/migrations/2018-04-15-134939_galaxy_object_foreign_key/: down.sql
tg_space_game/migrations/2018-05-08-111628_rename_galaxy_object_id/: down.sql  up.sql
tg_space_game/migrations/2018-05-08-111946_rename_galaxy_object_type/: down.sql  up.sql
tg_space_game/migrations/2018-05-08-112304_rename_star_sectors_galaxy_object_id/: down.sql  up.sql
tg_space_game/migrations/2018-05-08-112621_rename_star_sector_futures_galaxy_object_id/: down.sql  up.sql
tg_space_game/migrations/2018-05-08-112942_rename_star_systems_galaxy_object_id/: down.sql  up.sql
tg_space_game/src/: galaxy_objects.rs  lib.rs  models.rs  tools.rs
tg_space_game_tests/: Cargo.toml  build.rs
tg_space_game_tests/tests/: galaxy_objects.rs  lib.rs
(+10 files in other folders)
